- Autocomplete elements/menu item/smal crud butons

--- a/wikifood/src/main/webapp/index.html
+++ b/wikifood/src/main/webapp/index.html
@@ -20,6 +20,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
 	<link rel="stylesheet" href="css/jquery.dynatable.css">
+	<link rel="stylesheet" href="css/easy-autocomplete.min.css">
+	<link rel="stylesheet" href="css/easy-autocomplete.themes.min.css">
     <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
           page. However, you can choose any other skin. Make sure you
           apply the skin class to the body tag so the changes take effect.
@@ -224,6 +226,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 			
     <script src="js/crud.js"></script>
 	<script src="js/jquery.dynatable.js"></script>
+	<script src="js/jquery.easy-autocomplete.min.js"></script>
 	<!--script src="js/menu.js"></script-->
 
     <!-- Optionally, you can add Slimscroll and FastClick plugins.
