--- a/wikifood/src/main/webapp/entite/article.html
+++ b/wikifood/src/main/webapp/entite/article.html
@@ -5,29 +5,33 @@
     </div><!-- /.box-header -->
     <div class="box-body">
         <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                      <label>ID</label>
-                      <input id="item" name="item" type="text" class="form-control">
-                </div>       
+            <div class="col-md-4">      
 				<div class="form-group">
-                      <label>itemLabel Fr</label>
+                      <label>item Label Fr</label>
                       <input id="itemLabelFr" name="itemLabelFr" type="text" class="form-control">
                 </div>
                 <div class="form-group">
-                      <label>itemLabel En</label>
+                      <label>item Label En</label>
                       <input id="itemLabelEn" name="itemLabelEn" type="text" class="form-control">
                 </div>
+				<div class="form-group">
+                      <label>item Label Ar</label>
+                      <input id="itemLabelAr" name="itemLabelAr" type="text" class="form-control">
+                </div> 
             </div><!-- /.col -->
             <div class="col-md-4">
 			    <div class="form-group">
-                      <label>itemLabel Es</label>
-                      <input id="itemLabelEs" name="itemLabelEs" type="text" class="form-control">
-                </div> 	
+                      <label>item Desc Fr</label>
+                      <textarea id="itemDescFr" name="itemDescFr"  class="form-control" rows="3"></textarea>
+                </div>	
                 <div class="form-group">
-                      <label>itemLabel Ar</label>
-                      <input id="itemLabelAr" name="itemLabelAr" type="text" class="form-control">
-                </div>               
+                      <label>item Desc En</label>
+                      <textarea id="itemDescEn" name="itemDescEn"  class="form-control" rows="3"></textarea>
+                </div>	  
+                <div class="form-group">
+                      <label>item Desc Ar</label>
+                      <textarea id="itemDescAr" name="itemDescAr"  class="form-control" rows="3"></textarea>
+                </div>	  				
             </div><!-- /.col -->
 			<div class="col-md-4">
 			    <div class="form-group">
