--- a/wikifood/src/main/webapp/entite/typearticle.html
+++ b/wikifood/src/main/webapp/entite/typearticle.html
@@ -1,21 +1,39 @@
 <form role="form" id="entityform">
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Serveurs</h3>
+        <h3 class="box-title">Type Article</h3>
     </div><!-- /.box-header -->
     <div class="box-body">
         <div class="row">
-            <div class="col-md-6">     
+            <div class="col-md-4">      
 				<div class="form-group">
-                      <label>Nom</label>
-                      <input id="id" name="nom" type="text" class="form-control">
-				</div> 
+                      <label>item Label Fr</label>
+                      <input id="itemLabelFr" name="itemLabelFr" type="text" class="form-control">
+                </div>
                 <div class="form-group">
-                      <label>Description</label>
-                      <textarea id="description" name="description"  class="form-control" rows="3"></textarea>
-                </div>	   
+                      <label>item Label En</label>
+                      <input id="itemLabelEn" name="itemLabelEn" type="text" class="form-control">
+                </div>
+				<div class="form-group">
+                      <label>item Label Ar</label>
+                      <input id="itemLabelAr" name="itemLabelAr" type="text" class="form-control">
+                </div> 
             </div><!-- /.col -->
-            <div class="col-md-6">
+            <div class="col-md-4">
+			    <div class="form-group">
+                      <label>item Desc Fr</label>
+                      <textarea id="itemDescFr" name="itemDescFr"  class="form-control" rows="3"></textarea>
+                </div>	
+                <div class="form-group">
+                      <label>item Desc En</label>
+                      <textarea id="itemDescEn" name="itemDescEn"  class="form-control" rows="3"></textarea>
+                </div>	  
+                <div class="form-group">
+                      <label>item Desc Ar</label>
+                      <textarea id="itemDescAr" name="itemDescAr"  class="form-control" rows="3"></textarea>
+                </div>	  				
+            </div><!-- /.col -->
+            <div class="col-md-4">
 			    <div class="form-group">
 			          <!--button type="button" class="btn btn-block btn-default">Parcourir ...</button-->
 					  <input type='file' class="btn btn-block btn-default" onchange="readURL(this);" />
