--- a/wikifood-manager/src/main/webapp/entite/article.html
+++ b/wikifood-manager/src/main/webapp/entite/article.html
@@ -5,7 +5,11 @@
     </div><!-- /.box-header -->
     <div class="box-body">
         <div class="row">
-            <div class="col-md-4">      
+            <div class="col-md-4">     
+                <div class="form-group">
+                      <label>user</label>
+                      <input id="user" name="user" type="text" class="form-control">
+                </div>			
 				<div class="form-group">
                       <label>item Label Fr</label>
                       <input id="itemLabelFr" name="itemLabelFr" type="text" class="form-control">
@@ -20,6 +24,10 @@
                 </div> 
             </div><!-- /.col -->
             <div class="col-md-4">
+			    <div class="form-group">
+                      <label>prix</label>
+                      <input id="prix" name="prix" type="text" class="form-control">
+                </div>
 			    <div class="form-group">
                       <label>item Desc Fr</label>
                       <textarea id="itemDescFr" name="itemDescFr"  class="form-control" rows="3"></textarea>
