--- a/wikifood-manager/src/main/webapp/entite/typearticle.html
+++ b/wikifood-manager/src/main/webapp/entite/typearticle.html
@@ -6,6 +6,10 @@
     <div class="box-body">
         <div class="row">
             <div class="col-md-4">      
+			    <div class="form-group">
+                      <label>user</label>
+                      <input id="user" name="user" type="text" class="form-control">
+                </div>
 				<div class="form-group">
                       <label>item Label Fr</label>
                       <input id="itemLabelFr" name="itemLabelFr" type="text" class="form-control">
