--- a/wikifood-manager/src/main/webapp/index.html
+++ b/wikifood-manager/src/main/webapp/index.html
@@ -107,7 +107,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <ul class="treeview-menu">
                 <li><a class="treeview-menu-entity" name="article">Articles</a></li>
 				<li><a class="treeview-menu-entity" name="typearticle">Type d'articles</a></li>
-				<li><a class="treeview-menu-entity" name="serveur">Serveurs</a></li>            
+				<li><a class="treeview-menu-entity" name="user">Users</a></li>            
               </ul>
             </li>
             <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
