--- a/wikifood-manager/src/main/webapp/entite/user.html
+++ b/wikifood-manager/src/main/webapp/entite/user.html
@@ -1,7 +1,7 @@
 <form role="form" id="entityform">
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Serveurs</h3>
+        <h3 class="box-title">Users</h3>
     </div><!-- /.box-header -->
     <div class="box-body">
         <div class="row">
@@ -11,17 +11,45 @@
                       <input id="nom" name="nom" type="text" class="form-control">
 				</div> 
 			    <div class="form-group">
-                      <label>CIN</label>
-                      <input id="id" name="cin" type="text" class="form-control">
+                      <label>Login</label>
+                      <input id="login" name="login" type="text" class="form-control">
                 </div> 
 				<div class="form-group">
                       <label>Password</label>
                       <input id="password" name="password" type="password" class="form-control">
                 </div>
+				<div class="form-group">
+                      <label>Longitude</label>
+                      <input id="lng" name="lng" type="text" class="form-control">
+                </div>
+				<div class="form-group">
+                      <label>Latitude</label>
+                      <input id="lat" name="lat" type="text" class="form-control">
+                </div>
                 <div class="form-group">
                       <label>Description</label>
                       <textarea id="description" name="description"  class="form-control" rows="3"></textarea>
-                </div>	   
+                </div>
+                <div class="form-group">
+                      <label>devise</label>
+                      <input id="devise" name="devise" type="text" class="form-control">
+                </div>
+				<div class="form-group">
+                      <label>tel</label>
+                      <input id="tel" name="tel" type="text" class="form-control">
+                </div>
+				<div class="form-group">
+                      <label>email</label>
+                      <input id="email" name="email" type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                      <label>adresse</label>
+                      <textarea id="adresse" name="adresse"  class="form-control" rows="3"></textarea>
+                </div>	
+				<div class="form-group">
+                      <label>horaires</label>
+                      <textarea id="horaires" name="horaires"  class="form-control" rows="3"></textarea>
+                </div>	
             </div><!-- /.col -->
             <div class="col-md-6">
 			    <div class="form-group">
