--- a/wikifood-mobile/src/main/webapp/index.html
+++ b/wikifood-mobile/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>R</title>
+	<title class='user-nom'>My App</title>
     <!--	link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700"-->
 	<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">
 	<link rel="stylesheet" href="css/index.css">
@@ -12,10 +12,33 @@
 	<link rel="stylesheet" href="css/unslider-dots.css"/>
 </head>
 <body>
+    <div data-role="page" id="loadpage">
+	     <div data-role="content" style="text-align:center;">
+			<div class='container'>
+				<h1 id="loadingh1">Cooking in progress..</h1>
+					<div id="cooking">
+						<div class="bubble"></div>
+						<div class="bubble"></div>
+						<div class="bubble"></div>
+						<div class="bubble"></div>
+						<div class="bubble"></div>
+						<div id="area">
+						<div id="sides">
+							<div id="pan"></div>
+							<div id="handle"></div>
+						</div>
+						<div id="pancake">
+							<div id="pastry"></div>
+						</div>
+						</div>
+					</div>
+			</div>
+		 </div>
+	</div>	 
     <div data-role="page" id="home">
 	    <div data-role="header">
-		    <h1>The Dude's Dinner</h1>
-            <img src="image/my_logo.png" class="ui-btn-right" style="height:35;width:35px;"/>
+		    <h1 class='user-nom'>The Dude's Dinner</h1>
+            <img src="image/my_logo.png" class="ui-btn-right user-img" style="height:35;width:35px;"/>
 			 <div data-role="navbar">
 				<ul>
 					<li><a class="ui-btn-active ui-state-persist" href="#home">Home</a></li>
@@ -34,10 +57,8 @@
 			</ul>
 			</div>
 			<div style="text-align:left;">
-                <h2>Fixed Gear</h2>            
-			    <p>A fixed-gear or fixed-wheel bicycle, commonly known as a fixie, is a bicycle that has a drivetrain with no freewheel mechanism. The freewheel was developed early in the history of bicycle design but the fixed-gear bicycle remained the standard track racing design. More recently the 'fixie' has become a popular alternative among mainly urban cyclists, offering the advantages of simplicity compared with the standard multi-geared bicycle.</p>
-                <p>A fixed-gear or fixed-wheel bicycle, commonly known as a fixie, is a bicycle that has a drivetrain with no freewheel mechanism. The freewheel was developed early in the history of bicycle design but the fixed-gear bicycle remained the standard track racing design. More recently the 'fixie' has become a popular alternative among mainly urban cyclists, offering the advantages of simplicity compared with the standard multi-geared bicycle.</p>			
-                <p>A fixed-gear or fixed-wheel bicycle, commonly known as a fixie, is a bicycle that has a drivetrain with no freewheel mechanism. The freewheel was developed early in the history of bicycle design but the fixed-gear bicycle remained the standard track racing design. More recently the 'fixie' has become a popular alternative among mainly urban cyclists, offering the advantages of simplicity compared with the standard multi-geared bicycle.</p>							
+                <h2>Welcom to <span class="user-nom">blue</span></h2>            
+			    <p class='user-description'>A fixed-gear or fixed-wheel bicycle, commonly known as a fixie, is a bicycle that has a drivetrain with no freewheel mechanism. The freewheel was developed early in the history of bicycle design but the fixed-gear bicycle remained the standard track racing design. More recently the 'fixie' has become a popular alternative among mainly urban cyclists, offering the advantages of simplicity compared with the standard multi-geared bicycle.</p>
 			</div>
 	    </div><!-- /content -->
 		<div data-role="footer" data-position="fixed">
@@ -46,8 +67,8 @@
     </div><!-- /page -->
 	<div data-role="page" id="menu" class="listview-page">
 	    <div data-role="header">
-		    <h1>My App</h1>
-            <img src="image/my_logo.png" class="ui-btn-right" style="height:35;width:35px;"/>
+		    <h1 class='user-nom'>My App</h1>
+            <img src="image/my_logo.png" class="ui-btn-right user-img" style="height:35;width:35px;"/>
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#home">Home</a></li>
@@ -68,8 +89,8 @@
     </div><!-- /page -->
 	<div data-role="page" id="menuitem" class="listview-page">
 	    <div data-role="header">
-		    <h1>My App</h1>
-            <img src="image/my_logo.png" class="ui-btn-right" style="height:35;width:35px;"/>
+		    <h1 class='user-nom'>My App</h1>
+            <img src="image/my_logo.png" class="ui-btn-right user-img" style="height:35;width:35px;"/>
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#home">Home</a></li>
@@ -90,8 +111,8 @@
     </div><!-- /page -->
 	<div data-role="page" id="aboutus">
 	    <div data-role="header">
-		    <h1>My App</h1>
-            <img src="image/my_logo.png" class="ui-btn-right" style="height:35;width:35px;"/>
+		    <h1 class='user-nom'>My App</h1>
+            <img src="image/my_logo.png" class="ui-btn-right user-img" style="height:35;width:35px;"/>
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#home">Home</a></li>
@@ -103,10 +124,10 @@
 		<div data-role="content">
 		    <h2>Contactez-nous</h2>
 		    <ul data-role="listview">    
-				<li><p><b>Mobile :</b> 0607446601</p></li>    
-				<li><p><b>Mail :</b> mehdi.inpt@live.com</p></li>    
-				<li><p><b>Adresse :</b> Boulevard Ben Yacine, Casablanca 20250, Maroc</p></li>    
-				<li><p><b>Horaires:</b> Ouvert aujourd'hui · 09:00–16:00</p></li>    
+				<li><p><b>Mobile :</b><span class="user-tel"></span></p></li>    
+				<li><p><b>Mail :</b><span class="user-email"></span></p></li>    
+				<li><p><b>Adresse :</b><span class="user-adresse"></span></p></li>    
+				<li><p><b>Horaires:</b><span class="user-horaires"></span></p></li>    
 				<li><div id="map" style="width: 100%; height: 250px;">
                          <!-- map loaded here... -->
                     </div> </li>
