--- a/wikifood-mobile/src/main/webapp/index.html
+++ b/wikifood-mobile/src/main/webapp/index.html
@@ -141,7 +141,7 @@
 	<script src="js/jquery.jsonp.js"></script>
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/unslider-min.js"></script>
-	<script src="http://maps.google.cn/maps/api/js?key=AIzaSyDRfNg2lXkkQOyqNBpl1IuZAMu4c1_N2nw" type="text/javascript"></script>
+	<script src="http://maps.google.cn/maps/api/js?key=" type="text/javascript"></script>
 	<script src="js/myapp.js"></script>
 </body>
 </html>
